--- a/src/app/files-editor/files-editor.component.html
+++ b/src/app/files-editor/files-editor.component.html
@@ -1,4 +1,4 @@
 <!-- Copyright 2021 Carnegie Mellon University. -->
 <!-- Released under a 3 Clause BSD-style license. See LICENSE.md in the project root. -->
 
-<p>files-editor works!</p>
+<app-iso-manager [guid]="summary.globalId"></app-iso-manager>
