--- a/src/app/error-div/error-div.component.html
+++ b/src/app/error-div/error-div.component.html
@@ -2,5 +2,5 @@
 <!-- Released under a 3 Clause BSD-style license. See LICENSE.md in the project root. -->
 
 <alert *ngFor="let e of errors" type="danger" [dismissible]="true">
-  {{e.message || e}}
+  {{e.error?.message || e.message || e | spaces}}
 </alert>
