--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,9 +3,10 @@
 
 <div class="text-center">
   <p>Please login to continue.</p>
-  <button class="btn btn-lg btn-primary" (click)="login()" aria-label="identity provider">
+  <button [hidden]="working" class="btn btn-lg btn-primary" (click)="login()" aria-label="identity provider">
     <fa-icon [icon]="faOpenid"></fa-icon>
     <span>Login </span>
     <span>&mdash; {{authority}}</span>
   </button>
+  <app-spinner *ngIf="working"></app-spinner>
 </div>
