--- a/src/app/settings-editor/settings-editor.component.html
+++ b/src/app/settings-editor/settings-editor.component.html
@@ -15,7 +15,8 @@
 
   <div class="form-group bg-light">
     <label class="mb-0" for="description-input">Description</label>
-    <textarea id="description-input" type="text" rows=5 class="form-control" formControlName="description"></textarea>
+    <textarea id="description-input" type="text" rows=3 class="form-control" formControlName="description"></textarea>
+    <small>Short description to display when browsing titles</small>
   </div>
 
   <div class="form-group bg-light">
