--- a/src/styles.scss
+++ b/src/styles.scss
@@ -38,7 +38,7 @@ $theme-colors: (
 // @import "../node_modules/bootstrap/scss/badge";
 // @import "../node_modules/bootstrap/scss/jumbotron";
 @import "../node_modules/bootstrap/scss/alert";
-// @import "../node_modules/bootstrap/scss/progress";
+@import "../node_modules/bootstrap/scss/progress";
 @import "../node_modules/bootstrap/scss/media";
 // @import "../node_modules/bootstrap/scss/list-group";
 @import "../node_modules/bootstrap/scss/close";
@@ -112,6 +112,9 @@ h1,h2,h3,h4,h5 {
 }
 .jambotron {
   margin: 6rem auto;
+}
+.alert {
+  margin-bottom: .25rem !important;
 }
 app-spinner svg {
   rect,path {
