--- a/projects/topomojo-mks/src/app/console/console.component.html
+++ b/projects/topomojo-mks/src/app/console/console.component.html
@@ -1,3 +1,6 @@
+<!-- Copyright 2021 Carnegie Mellon University. -->
+<!-- Released under a 3 Clause BSD-style license. See LICENSE.md in the project root. -->
+
 <div class="console-wrapper">
 
   <div #consoleCanvas id="console-canvas-" [class.canvas]="!viewOnly" [class.embedded]="viewOnly"
