--- a/projects/topomojo-mks/src/app/spinner/spinner.component.html
+++ b/projects/topomojo-mks/src/app/spinner/spinner.component.html
@@ -1,3 +1,6 @@
+<!-- Copyright 2021 Carnegie Mellon University. -->
+<!-- Released under a 3 Clause BSD-style license. See LICENSE.md in the project root. -->
+
 <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
     width="108px" height="132px" viewBox="0 0 24 30" style="enable-background:new 0 0 50 50;" xml:space="preserve">
   <rect x="0" y="10" width="4" height="10" fill="#323" opacity="0.2">
