--- a/projects/topomojo-work/src/app/error-div/error-div.component.html
+++ b/projects/topomojo-work/src/app/error-div/error-div.component.html
@@ -1,6 +1,6 @@
 <!-- Copyright 2021 Carnegie Mellon University. -->
 <!-- Released under a 3 Clause BSD-style license. See LICENSE.md in the project root. -->
 
-<alert *ngFor="let e of errors" type="danger" [dismissible]="true">
+<alert *ngFor="let e of errors" type="danger" [dismissible]="true" (onClosed)="closed(e)">
   {{e.error?.message || e.message || e | spaces}}
 </alert>
