table padding, randoms info

--- a/projects/topomojo-work/src/app/challenge-editor/challenge-editor.component.html
+++ b/projects/topomojo-work/src/app/challenge-editor/challenge-editor.component.html
@@ -44,6 +44,7 @@
           b64:16 &mdash; yields 16 base64 characters
           int:99-999 &mdash; yields decimal string between 99 and 999
           list:one two three four &mdash; yields a single word
+          list:2:one two three four five &mdash; yields two words (and indexed keys `##key_1##`, `##key_2##`)
         </pre>
       </small>
     </div>
