--- a/projects/topomojo-mks/src/styles.scss
+++ b/projects/topomojo-mks/src/styles.scss
@@ -127,7 +127,7 @@ input.form-check-input {
 .audience {
   background-color: $primary;
   color: $light;
-  border: $bright solid 2px;
+  // border: $bright solid 2px;
 }
 .text-light {
   color: $light;
