--- a/projects/topomojo-work/src/app/challenge-editor/challenge-editor.component.html
+++ b/projects/topomojo-work/src/app/challenge-editor/challenge-editor.component.html
@@ -93,7 +93,7 @@
         </app-confirm-button>
       </div>
 
-      <app-variant-form [form]="$any(v)" [detail]="detail[i]"></app-variant-form>
+      <app-variant-form [form]="$any(v)" [index]="i" [detail]="detail[i]"></app-variant-form>
 
     </div>
   </div>
