--- a/projects/topomojo-work/src/app/about/about.component.html
+++ b/projects/topomojo-work/src/app/about/about.component.html
@@ -32,13 +32,12 @@
         Ctrl-L: toggle left panel
         Ctrl-H: navigate home
         ----
-        Ctrl-S: workplace settings
-        Ctrl-T: workspace templates
-        Ctrl-D: workspace document
-        Ctrl-C: workspace challenge
-        Ctrl-F: workspace files
-        Ctrl-P: play workspace
-        Ctrl-[1-6]: navigate to workspace section
+        Ctrl-1: workplace settings
+        Ctrl-2: workspace templates
+        Ctrl-3: workspace document
+        Ctrl-4: workspace challenge
+        Ctrl-5: workspace files
+        Ctrl-6: play workspace
       </pre>
     </div>
   </div>
