--- a/projects/topomojo-work/src/app/template-editor-form/template-editor-form.component.html
+++ b/projects/topomojo-work/src/app/template-editor-form/template-editor-form.component.html
@@ -33,7 +33,7 @@
   <div class="form-group bg-light">
     <label class="mb-0" for="replicas-input">Replicas</label>
     <input id="replicas-input" type="number" class="form-control" [(ngModel)]="template.replicas" name="replicas" >
-    <small>how many copies to deploy. (<code>-1</code> means one per player)</small>
+    <small>how many copies to deploy in a <em>gamespace</em>. (<code>-1</code> means one per player)</small>
   </div>
 
   <div class="form-group bg-light">
