--- a/projects/topomojo-work/src/app/template-editor/template-editor.component.html
+++ b/projects/topomojo-work/src/app/template-editor/template-editor.component.html
@@ -23,9 +23,22 @@
   <div class="col-12">
     <div class="">
 
-      <alert type="warning" *ngIf="toolbar.vm.id">
-        Cannot edit while template is deployed.
-      </alert>
+      <div *ngIf="toolbar.vm.id">
+        <div class="pop-warning p-2 mb-2" >
+          Cannot edit while template is deployed.
+        </div>
+        <table class="table table-striped text-left">
+          <tbody>
+            <tr><td>Description</td><td><pre>{{template.description}}</pre></td></tr>
+            <tr><td>Networks</td><td>{{template.networks}}</td></tr>
+            <tr><td>Iso</td><td>{{template.iso?.split('/')?.pop()}}</td></tr>
+            <tr><td>Guest Settings</td><td><pre>{{template.guestinfo}}</pre></td></tr>
+            <tr><td>Replicas</td><td>{{template.replicas}}</td></tr>
+            <tr><td>Access</td><td>{{template.isHidden ? 'Hidden' : 'Visible'}}</td></tr>
+            <tr><td>Link</td><td>{{template.parentId ? 'Linked' : 'Unlinked'}}</td></tr>
+          </tbody>
+        </table>
+      </div>
 
       <div *ngIf="!toolbar.vm.id">
 
